# BoyKissers-Repository

seminar-10/: CMakeLists.txt  Readme.md
seminar-10/build-tests/: CTestTestfile.cmake
seminar-10/inc/: console_view.hpp  enemy.hpp  game_entity.hpp  game_world.hpp  player.hpp  power_up.hpp
seminar-10/src/: console_view.cpp  enemy.cpp  game_entity.cpp  game_world.cpp  main.cpp  player.cpp  power_up.cpp
seminar-10/tests/: test_game_entities.cpp
seminar-7/: CMakeLists.txt  Readme.md  анализ набора данных.md
seminar-7/inc/: dataset_utils.hpp
seminar-7/src/: dataset_utils.cpp  main.cpp
seminar-7/tests/: test_dataset_utils.cpp
